--- a/Find-Your-Fit-main/My_Fitness_Pal_Clone/Landing Page/index.css
+++ b/Find-Your-Fit-main/My_Fitness_Pal_Clone/Landing Page/index.css
@@ -94,7 +94,7 @@ a, a:link, a:visited {
 
 .header__navigation_bar{
     width: 100%;
-    background-color: black;
+    background-color: #0072BF;
     /* margin-top: 15px; */
     min-height: 45px;
     display: flex;
@@ -234,3 +234,47 @@ a, a:link, a:visited {
    
 }
 
+.topfheader{
+    color: rgb(21,21,21);
+    margin: 0 auto;
+    font-size: 45px;
+    font-weight: 900;
+    margin-left: 22vw;
+}
+.topsheaderbelow{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 23.5vw;
+    font-size: 16px;
+}
+.topbutton{
+    font-size: 0.9375rem;
+    color: #FFF;
+    background-color: #0066EE;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 4px;
+    line-height: 1.75;
+    max-width: 300px;
+    
+    padding: 12px 68px;
+    font-weight: 700;
+}
+
+a:link{
+    color: black;
+}
+a:visited{
+    color: black;
+}
+a:active{
+    color: black;
+}
+a:hover{
+    color: black;
+}
+/* .topbutton{
+    margin-left: 40vw;
+    color: white;
+    background: blueviolet;
+} */
