--- a/Find-Your-Fit-main/My_Fitness_Pal_Clone/MY HOME/my-home.css
+++ b/Find-Your-Fit-main/My_Fitness_Pal_Clone/MY HOME/my-home.css
@@ -33,6 +33,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #f7f7f7;
    
 }
 #logo{
@@ -51,6 +52,7 @@ a, a:link, a:visited {
     display: flex;
     font-size: 12px;
     text-align: center;
+    background-color: #f7f7f7;
 }
 
 
@@ -84,7 +86,7 @@ a, a:link, a:visited {
 
 .header__navigation_bar{
     width: 100%;
-    background-color: #0072BF;
+    background-color: black;
     /* margin-top: 15px; */
     min-height: 45px;
     display: flex;
@@ -108,7 +110,7 @@ a, a:link, a:visited {
 .header__navggation_sub_bar{
     min-height: 45px;
     width: 100%;
-    background-color: #00548F;
+    background-color: #20262E;
     display: flex;
 }
 
@@ -121,6 +123,7 @@ a, a:link, a:visited {
     text-decoration: none;
     line-height: 45px;
     font-size: 13px;
+    background-color: #20262E;
 }
 
 
@@ -148,7 +151,7 @@ a, a:link, a:visited {
             min-height: 36px;
             width: 100%;
             height: 40px;
-            background-color: rgb(10,82,130);
+            background-color:#20262E;
             color: rgb(216,255,255);
         }
 
@@ -261,7 +264,7 @@ a, a:link, a:visited {
             margin:auto;
             font-weight: 300;
             border: none;
-            background-color: rgb(0,112,191);
+            background-color: #20262E;
         }
         .myhome__left_verifyEmail--Content h3, .myhome__left_verifyEmail--Content p{
             padding: 0;
@@ -281,7 +284,7 @@ a, a:link, a:visited {
             width: 100%;
             position: relative;
             color: rgb(255,255,255);
-            background-color: rgb(10,82,130);
+            background-color: #20262E;
         }
         .myhome__left_newsfeed--content{
             display: flex;
@@ -300,7 +303,7 @@ a, a:link, a:visited {
             height: 40px;
             margin: 0;
             color: rgb(255,255,255);
-            background-color: rgb(0,112,191);
+            background-color: #20262E;
             border: none;
             
         }
@@ -404,7 +407,7 @@ a, a:link, a:visited {
         grid-template-columns: 90% 10%;
         grid-template-rows: 50px;
         align-items: center;
-        background-color:rgb(0,114,188);
+        background-color:#20262E;
         color: rgb(255,233,229); 
     }
 
@@ -532,7 +535,7 @@ a, a:link, a:visited {
     margin-top: 10px;
 }
 .footer_upper_content > a{
-    color: #0072BC;
+    color: black;
     cursor: pointer;
     text-decoration: none;
     font-size: 12px;
